Add: - Controllers - Repositories - Services - Implemented UserService
