# appointment-manager-service/src/main/java/net/appointment/entity/ReviewEntity.java
@@ -1,0 +1,38 @@
+package net.appointment.entity;
+
+import jakarta.persistence.*;
+import lombok.Data;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+@Entity
+@Table(name = "REVIEWS")
+@Data
+public class ReviewEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    private UUID id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "COMPANY_ID")
+    private CompanyEntity company;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "USER_ID")
+    private UserEntity user;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "EMPLOYEE_ID")
+    private EmployeeEntity employee;
+
+    @Column(name = "RATING")
+    private Integer rating;
+
+    @Column(name = "COMMENT")
+    private String comment;
+
+    @Column(name = "CREATED_AT")
+    private LocalDateTime createdAt;
+}
